Add blacklist management to API and client
